# orbits-of-earth-and-moon

./: .gitignore  3Dexaggerated_plot.py  3Dexaggrated_plot.py  3Dplot.py  3Dplot_earth_moon.py  CMakeLists.txt  CONTRIBUTING.md  README.md  animatetwodots.py  orbit_sim_cli_reference.md  plot.py  polt.py  requirements.txt
include/: barycenter.h  body.h  cli.h  conservations.h  eclipse.h  horizons.h  json_loader.h  main.h  ray.h  simulation.h  utils.h  validate.h  vec3.h
include/nlohmann/: README.md
include/viewer/: csv_loader.h  sphere_mesh.h
plotting_scripts/: 3Draytracking.py  angular_momentum_plot.py
shaders/: earth.frag  earth.vert
src/: cli.cpp  conservations.cpp  eclipse.cpp  horizons.cpp  json_loader.cpp  main.cpp  orbit_viewer.cpp  simulation.cpp
src/cli/: cli.cpp
src/core/: barycenter.cpp  conservations.cpp  eclipse.cpp  simulation.cpp
src/io/: horizons.cpp  validate.cpp
src/viewer/: csv_loader.cpp  orbit_viewer.cpp  sphere_mesh.cpp
systems/: earth_moon.json  solar_system.json
